--- a/s.html
+++ b/s.html
@@ -6,13 +6,9 @@
     <title>Document</title>
 </head>
 <style>
-    img{
-     height: 40px;
-     margin: 0 auto 8px;
-     z-index: 9999999999999999;
-    }
+    
 </style>
 <body>
-
+    <a href="../LGU-2-main-main/assets/img/default-avatar.jpg"></a>
 </body>
 </html>
